# otel-california

./: .env  Cargo.toml  README.md
src/: handlers.rs  main.rs  metrics.rs  middlewares.rs  telemetry.rs
