[package]
name = "otel-california"
version = "0.1.0"
edition = "2021"

[dependencies]
init-tracing-opentelemetry = { version = "0.22.0", features = [
    "otlp",
    "tracing_subscriber_ext",
] }
opentelemetry = { version = "0.26.0", features = ["metrics", "logs"] }
axum = "0.7.7"
axum-tracing-opentelemetry = "0.21.1"
opentelemetry-otlp = { version = "0.26.0", features = [
    "metrics",
    "tonic",
    "logs",
] }
serde_json = "1.0.132"
tokio = { version = "~1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-opentelemetry-instrumentation-sdk = "0.21.0"
anyhow = "1.0.92"
opentelemetry_sdk = { version = "0.26.0", features = [
    "metrics",
    "rt-tokio",
    "logs",
] }
opentelemetry-semantic-conventions = "0.26.0"
opentelemetry-appender-tracing = "0.26.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-opentelemetry = "0.27.0"
dotenv = "0.15.0"
